[gd_scene load_steps=7 format=2]

[ext_resource path="res://Sprites/vittomiku.png" type="Texture" id=1]
[ext_resource path="res://elvitto.gd" type="Script" id=2]
[ext_resource path="res://Sprites/vittomiku2.png" type="Texture" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 4.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 76.0
height = 74.3435

[sub_resource type="CapsuleShape2D" id=3]
radius = 88.6518
height = 80.0

[node name="KinematicBody2D" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 11.9693, 5.66965 )
scale = Vector2( 0.2, 0.2 )
frames = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -5.5, -3 )
shape = SubResource( 2 )

[node name="hurtbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 12

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtbox"]
shape = SubResource( 3 )

[node name="bala" type="Position2D" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( -74.1662, 1.49831 )
rotation = 1.57079
enabled = true
collision_mask = 8

[node name="atacar" type="Timer" parent="."]

[node name="stun" type="Timer" parent="."]
wait_time = 0.2

[connection signal="area_entered" from="hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="timeout" from="atacar" to="." method="_on_atacar_timeout"]
[connection signal="timeout" from="stun" to="." method="_on_stun_timeout"]
